adjusted slider bar and removed custom jquery-mobile code causing slider issues on mobile devices

--- a/src/main/resources/static/css/survey_style.css
+++ b/src/main/resources/static/css/survey_style.css
@@ -149,9 +149,9 @@ input[type=range]::-webkit-slider-runnable-track {
 input[type=range]::-webkit-slider-thumb {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
-  height: 36px;
+  height: 32px;
   width: 16px;
-  border-radius: 3px;
+  border-radius: 8px;
   background: #ffffff;
   cursor: pointer;
   -webkit-appearance: none;
@@ -173,9 +173,9 @@ input[type=range]::-moz-range-track {
 input[type=range]::-moz-range-thumb {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
-  height: 36px;
+  height: 32px;
   width: 16px;
-  border-radius: 3px;
+  border-radius: 8px;
   background: #ffffff;
   cursor: pointer;
 }
@@ -204,9 +204,9 @@ input[type=range]::-ms-fill-upper {
 input[type=range]::-ms-thumb {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
-  height: 36px;
+  height: 32px;
   width: 16px;
-  border-radius: 3px;
+  border-radius: 8px;
   background: #ffffff;
   cursor: pointer;
 }
